# full-state-estimator

./: .gitignore  A_fn.ca  Dockerfile  Hybrid_filter.py  Hybrid_filter.py.orig  README.md  Untitled.ipynb  constraint.py  constraint_param_fit_test.ipynb  contact.py  controller.py  decision_vars.py  differentiability_tests.ipynb  disc_dyn.ca  dynamic_system.py  dynamics.py  env_dyn.py  helper_fns.py  main.py  main.py.orig  main_bak.py  mpc_CEM_warm_start.ipynb  mpc_iCEM_warmstart_tests.ipynb  mpc_planner.py  mpc_tests.ipynb  mpc_tests.py  mpc_trials_withMAP_roll.ipynb  new_trial_mpc.ipynb  observer.py  observer.py.orig  observer_BACKUP_2268.py  observer_BASE_2268.py  param_fit.py  pickle_plot.ipynb  robot.py  rosbag_plot.ipynb  rotation_helpers.py  test.ipynb  test.py  trajectory_helpers.py  (+2 more)
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  constraint_param_fit_test-checkpoint.ipynb  differentiability_tests-checkpoint.ipynb  mpc_CEM_warm_start-checkpoint.ipynb  mpc_iCEM_warmstart_tests-checkpoint.ipynb  mpc_tests-checkpoint.ipynb  new_trial_mpc-checkpoint.ipynb  pickle_plot-checkpoint.ipynb  rosbag_plot-checkpoint.ipynb  test-checkpoint.ipynb
urdf/src/racer_description/: CMakeLists.txt  package.xml  racer7_c5g.txt
urdf/src/racer_description/launch/: racer.launch  test.launch
urdf/src/racer_description/mesh/: base_link.STL  gripper.STL  gripper_v2.STL  link_1.STL  link_2.STL  link_3.STL  link_5.STL  link_6.STL
urdf/src/racer_description/urdf/: racer.urdf  racer7.urdf
urdf/src/racer_description/urdf/.ipynb_checkpoints/: racer-checkpoint.urdf  racer7-checkpoint.urdf
(+49 files in other folders)
